--- a/homepage + about us/HTML files/about.html
+++ b/homepage + about us/HTML files/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/CSS files/about.css">
+    <link rel="stylesheet" href="/homepage + about us/CSS files/about.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <header>
              <!-- Logo -->
             <a href="homepage.html">
-                <img id="logo" src="/images/logo_for_website.png" alt="Pet Adoption Match Logo">
+                <img id="logo" src="/homepage + about us/images/logo_for_website.png" alt="Pet Adoption Match Logo">
             </a>
             <!--Navigation Bar-->
             <nav> 
@@ -55,16 +55,16 @@
                 </div>
                 <div class="about-row">
                   <div class="about-image-wrapper">
-                    <img src="/images/About-Image_1-p-500.png"></div>
+                    <img src="/homepage + about us/images/About-Image_1-p-500.png"></div>
                   <div class="about-text-wrapper">
                     <p class="paragraph-big">We have a team of passionate and experienced professionals who are devoted to the well-being of pets. Our staff includes trained veterinarians, groomers, trainers, and caretakers who are committed to providing the best care possible.</p>
                     <div class="about-text shadow orange-shadow">
                       <div class="clients-profile-wrapper">
-                        <img src="/images/Mask-group-1_1Mask group-1.webp" loading="lazy" alt="Client Image" class="client-profile">
-                        <img src="/images/Mask-group-2_1Mask group-2.webp" loading="lazy" alt="Client Image" class="client-profile">
-                        <img src="/images/Mask-group_1Mask group.webp" loading="lazy" alt="Client Image" class="client-profile">
+                        <img src="/homepage + about us/images/Mask-group-1_1Mask group-1.webp" loading="lazy" alt="Client Image" class="client-profile">
+                        <img src="/homepage + about us/images/Mask-group-2_1Mask group-2.webp" loading="lazy" alt="Client Image" class="client-profile">
+                        <img src="/homepage + about us/images/Mask-group_1Mask group.webp" loading="lazy" alt="Client Image" class="client-profile">
                         <div class="client-profile with-bg-color">
-                            <img src="/images/Plus-Icon.svg" loading="lazy" alt="plus icon" class="plus-icon"></div>
+                            <img src="/homepage + about us/images/Plus-Icon.svg" loading="lazy" alt="plus icon" class="plus-icon"></div>
                       </div>
                       <div class="paragraph-big">Trusted by over x clients worldwide since 2023</div>
                     </div>
@@ -117,7 +117,7 @@
             <div class="row">
             <div class="column">
                 <div class="card">
-                <img src="/images/adopt a pet.jpeg" alt="Jane" style="width:100%">
+                <img src="/homepage + about us/images/adopt a pet.jpeg" alt="Jane" style="width:100%">
                 <div class="team_container">
                     <h2>Khoa Diep</h2>
                     <p class="title">Founder</p>
@@ -130,7 +130,7 @@
             
             <div class="column">
                 <div class="card">
-                <img src="/images/adopt a pet.jpeg" alt="Mike" style="width:100%">
+                <img src="/homepage + about us/images/adopt a pet.jpeg" alt="Mike" style="width:100%">
                 <div class="team_container">
                     <h2>David Viers</h2>
                     <p class="title">Founder</p>
@@ -143,7 +143,7 @@
             
             <div class="column">
                 <div class="card">
-                <img src="/images/adopt a pet.jpeg" alt="John" style="width:100%">
+                <img src="/homepage + about us/images/adopt a pet.jpeg" alt="John" style="width:100%">
                 <div class="team_container">
                     <h2>Ren Yamasaki</h2>
                     <p class="title">Founder</p>
