--- a/homepage + about us/HTML files/chatbot.html
+++ b/homepage + about us/HTML files/chatbot.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot UseCase</title>
     <!--CSS Style-->
-    <link rel="stylesheet" href="/CSS files/chatbot.css">
+    <link rel="stylesheet" href="/homepage + about us/CSS files/chatbot.css">
     <!-- Google Fonts Link For Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
@@ -37,7 +37,7 @@
       <div class="chatbox">
          <!-- Initial greeting message from the chatbot -->
         <li class="greeting">
-          <img class="chatbot-logo" src="/images/favicon_and_chatbot_logo.jpeg">
+          <img class="chatbot-logo" src="/homepage + about us/images/favicon_and_chatbot_logo.jpeg">
           <div class="paragraph">
             <p class="message delay-1">Hi there 👋</p>
             <p class="message delay-2">I'm Scout, the chatbot for Pet Adoption Match</p>
