--- a/homepage + about us/HTML files/about.html
+++ b/homepage + about us/HTML files/about.html
@@ -28,6 +28,7 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="providers">Pet Care Providers</a></li>
                 <li><a href="matching">Matching</a></li>
+                <li><a href="donation.html">Donate Now</a></li>
                 
     
             </nav>
