--- a/homepage + about us/HTML files/homepage.html
+++ b/homepage + about us/HTML files/homepage.html
@@ -39,6 +39,7 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="providers">Pet Care Providers</a></li>
             <li><a href="matching">Matching</a></li>
+            <li><a href="donation.html">Donate Now</a></li>
             
 
         </nav>
