Fixed some issue

--- a/homepage + about us/HTML files/homepage.html
+++ b/homepage + about us/HTML files/homepage.html
@@ -47,7 +47,7 @@
 
         <!-- Login/Sign Up Section -->
         <div class="login-signup">
-            <a id="login-link" href="login-page.html"><button id="login-button">Login</button></a>
+            <a id="login-link" href="/pet-491b/client/login"><button id="login-button">Login</button></a>
             <a id="signup-link" href="signup-page.html"><button id="signup-button">Sign Up</button></a>
         </div>
 
