Fix the homepage.html

--- a/homepage + about us/HTML files/homepage.html
+++ b/homepage + about us/HTML files/homepage.html
@@ -62,7 +62,7 @@
     <div id="homepage-image-container">
         <img id="homepage_image" src="/homepage + about us/images/adopt a pet.jpeg"> 
         <div id="overlay-text">
-            Let's get started. Search pets by types or locations from shelters and rescues.
+            <h2>Let's get started. Search pets by types or locations from shelters and rescues.</h2>
         </div>
         <div id="search-bar-container">
             <div id="search-bar">
