--- a/homepage + about us/HTML files/about.html
+++ b/homepage + about us/HTML files/about.html
@@ -49,7 +49,7 @@
     <!-- Main content -->
     <main>
         <section class="about-section">
-            <div class="w-layout-blockcontainer main-container w-container">
+            <div class="w-layout-blockcontainer  w-container">
               <div class="about-container">
                 <div class="about-heading-wrapper">
                   <h2 class="h1">The founding story behind our practice</h2>
