--- a/homepage + about us/HTML files/homepage.html
+++ b/homepage + about us/HTML files/homepage.html
@@ -263,7 +263,7 @@
     </section>
 
     <section class="FAQ_section">
-        <div class="w-layout-blockcontainer main-container w-container">
+        <div class="w-layout-blockcontainer main-container-of-faq w-container">
           <div class="faq-container">
             <h3 class="h1_title">Frequently asked questions</h3>
             <div class="faq-row">
@@ -385,7 +385,7 @@
     
 
 <section class="contact-section">
-  <div class="w-layout-blockcontainer main-container w-container">
+  <div class="w-layout-blockcontainer main-container-of-contact w-container">
     <div class="contact-container">
       <div class="contact-heading-wrapper">
         
