New Section FAQ

--- a/homepage + about us/HTML files/homepage.html
+++ b/homepage + about us/HTML files/homepage.html
@@ -263,14 +263,15 @@
     </section>
 
     <section class="FAQ_section">
-        <div class="w-layout-blockcontainer main-container-of-faq w-container">
+        <div class="w-layout-blockcontainer main-container-of-faq ">
           <div class="faq-container">
             <h3 class="h1_title">Frequently asked questions</h3>
             <div class="faq-row">
               <div class="faq-left-block shadow orange-shadow">
                 <div class="faq-left-block-text-wrapper">
                   <h4 id="your_question">You have more questions?</h4>
-                  <a href="tel:1234567890" class="phone-link"><img src="/homepage + about us/images/Orange-Phone-Icon.svg" loading="lazy" alt="phone icon" class="phone-icon hide-on-mobile">
+                  <a href="tel:1234567890" class="phone-link">
+                    <img src="/homepage + about us/images/Orange-Phone-Icon.svg" loading="lazy" alt="phone icon" class="phone-icon hide-on-mobile">
                     <div id="call_us">Call us: 1234567890</div>
                   </a>
                 </div>
