--- a/React_491Project/my-react-app/index.html
+++ b/React_491Project/my-react-app/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0"
     />
 
-    <title>Vite + React</title>
+    <title>Pet Adoption</title>
   </head>
 
   <body>
